add junit and metainf-services as deps

--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,14 @@
 			<groupId>edu.kit.ipd.parse</groupId>
 			<artifactId>luna</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.kohsuke.metainf-services</groupId>
+			<artifactId>metainf-services</artifactId>
+		</dependency>
 	</dependencies>
 </project>
