--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,6 @@
 			<groupId>edu.kit.ipd.parse</groupId>
 			<artifactId>luna</artifactId>
 			<scope>provided</scope>
-			<version>0.2.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.kit.ipd.parse</groupId>
@@ -56,6 +55,10 @@
 		<dependency>
 			<groupId>org.kohsuke.metainf-services</groupId>
 			<artifactId>metainf-services</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>edu.kit.ipd.parse</groupId>
+			<artifactId>SRLabeler</artifactId>
 		</dependency>
 	</dependencies>
 </project>
