--- a/pom.xml
+++ b/pom.xml
@@ -73,4 +73,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<properties>
+		<parse_bundle.directory>../parse_bundle</parse_bundle.directory>
+	</properties>
 </project>
