add ner as test dep

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>asr</artifactId>
 			<scope>test</scope>
 		</dependency>
+				<dependency>
+			<groupId>edu.kit.ipd.parse</groupId>
+			<artifactId>ner</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
