--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 master:
     script:
-        - mvn source:jar deploy -B -X
+        - mvn source:jar deploy -B
     tags:
         - mvn
     only:
