--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.4</version>
 	</parent>
 	<artifactId>graphBuilder</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.4-SNAPSHOT</version>
 	<repositories>
 		<repository>
         	<id>ipdNexus-public-releases</id>
